tests/miniJava/neg/000179_mutation.MiniJava
class java { public static Main Main ( String [ ] java ) { { } } }
